--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="tr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,11 +25,13 @@
                 size: landscape;
                 margin: 0.5cm;
             }
+
             body {
                 background: white;
                 -webkit-print-color-adjust: exact;
                 print-color-adjust: exact;
             }
+
             .no-print {
                 display: none;
             }
@@ -144,6 +147,87 @@
             margin-bottom: 0;
         }
 
+        /* Tooltip Styles */
+        .task-item {
+            position: relative;
+            cursor: pointer;
+            transition: background-color 0.2s;
+        }
+
+        .task-item:hover {
+            background-color: rgba(0, 0, 0, 0.02);
+            border-radius: 6px;
+        }
+
+        .task-tooltip {
+            visibility: hidden;
+            width: 250px;
+            background-color: #1f2937;
+            color: #fff;
+            text-align: left;
+            border-radius: 8px;
+            padding: 12px;
+            position: absolute;
+            z-index: 100;
+            bottom: 100%;
+            left: 50%;
+            margin-left: -125px;
+            opacity: 0;
+            transition: opacity 0.3s, transform 0.3s;
+            transform: translateY(10px);
+            font-size: 0.85rem;
+            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+            pointer-events: none;
+            margin-bottom: 8px;
+        }
+
+        .task-tooltip::after {
+            content: "";
+            position: absolute;
+            top: 100%;
+            left: 50%;
+            margin-left: -6px;
+            border-width: 6px;
+            border-style: solid;
+            border-color: #1f2937 transparent transparent transparent;
+        }
+
+        .task-item:hover .task-tooltip {
+            visibility: visible;
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        .tooltip-title {
+            font-weight: 700;
+            color: #fff;
+            margin-bottom: 6px;
+            display: block;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+            padding-bottom: 4px;
+        }
+
+        .progress-list {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        .progress-list li {
+            position: relative;
+            padding-left: 14px;
+            margin-bottom: 3px;
+            color: #d1d5db;
+        }
+
+        .progress-list li::before {
+            content: "✓";
+            position: absolute;
+            left: 0;
+            color: var(--accent-green);
+            font-size: 0.8em;
+        }
+
         .task-time {
             color: var(--text-secondary);
             font-size: 0.85rem;
@@ -180,20 +264,48 @@
         }
 
         /* Day Specific Colors */
-        .monday .day-header { background-color: var(--accent-blue); }
-        .tuesday .day-header { background-color: var(--accent-green); }
-        .wednesday .day-header { background-color: var(--accent-purple); }
-        .thursday .day-header { background-color: var(--accent-orange); }
-        .friday .day-header { background-color: var(--accent-rose); }
+        .monday .day-header {
+            background-color: var(--accent-blue);
+        }
 
-        .monday { border-top: 4px solid var(--accent-blue); }
-        .tuesday { border-top: 4px solid var(--accent-green); }
-        .wednesday { border-top: 4px solid var(--accent-purple); }
-        .thursday { border-top: 4px solid var(--accent-orange); }
-        .friday { border-top: 4px solid var(--accent-rose); }
+        .tuesday .day-header {
+            background-color: var(--accent-green);
+        }
 
+        .wednesday .day-header {
+            background-color: var(--accent-purple);
+        }
+
+        .thursday .day-header {
+            background-color: var(--accent-orange);
+        }
+
+        .friday .day-header {
+            background-color: var(--accent-rose);
+        }
+
+        .monday {
+            border-top: 4px solid var(--accent-blue);
+        }
+
+        .tuesday {
+            border-top: 4px solid var(--accent-green);
+        }
+
+        .wednesday {
+            border-top: 4px solid var(--accent-purple);
+        }
+
+        .thursday {
+            border-top: 4px solid var(--accent-orange);
+        }
+
+        .friday {
+            border-top: 4px solid var(--accent-rose);
+        }
     </style>
 </head>
+
 <body>
 
     <div class="container">
@@ -227,7 +339,7 @@
         </div>
 
         <div class="week-grid">
-            
+
             <!-- Monday -->
             <div class="day-card monday">
                 <div class="day-header">
@@ -239,10 +351,25 @@
                         <li class="task-item">
                             <span class="task-time">10:00 – 11:30</span>
                             <span class="task-desc">Haftalık task list / öncelik / hedef</span>
+                            <div class="task-tooltip">
+                                <span class="tooltip-title">İlerleme Durumu</span>
+                                <ul class="progress-list">
+                                    <li>Önceki haftanın analizi yapıldı</li>
+                                    <li>Yeni hedefler belirlendi</li>
+                                    <li>Öncelik sıralaması güncellendi</li>
+                                </ul>
+                            </div>
                         </li>
                         <li class="task-item">
                             <span class="task-time">11:30 – 12:00</span>
                             <span class="task-desc">Shopify + kanallar hızlı kontrol (ne bozuk ne eksik)</span>
+                            <div class="task-tooltip">
+                                <span class="tooltip-title">Kontrol Listesi</span>
+                                <ul class="progress-list">
+                                    <li>Checkout süreci test edildi</li>
+                                    <li>Meta ve Google feed'leri kontrol edildi</li>
+                                </ul>
+                            </div>
                         </li>
                         <li class="task-item">
                             <span class="task-time">13:00 – 16:30</span>
@@ -334,7 +461,8 @@
                         </li>
                         <li class="task-item">
                             <span class="task-time">13:00 – 17:45</span>
-                            <span class="task-desc">Ürün title/description/SEO metin düzeni + koleksiyon metinleri</span>
+                            <span class="task-desc">Ürün title/description/SEO metin düzeni + koleksiyon
+                                metinleri</span>
                         </li>
                     </ul>
                 </div>
@@ -380,4 +508,5 @@
     </div>
 
 </body>
+
 </html>
